--- a/style.css
+++ b/style.css
@@ -18,10 +18,9 @@
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+    width: 80%;
   }
   
-  /* The Close Button */
   .close {
     color: #aaa;
     float: right;
