--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #888;
-    width: 80%;
+    width: 250px;
 }
   
 .close {
@@ -28,10 +28,8 @@
     font-weight: bold;
 }
   
-.close:hover,
-.close:focus {
+.close {
     color: black;
-    text-decoration: none;
     cursor: pointer;
 }
 
@@ -59,11 +57,11 @@ body {
     border-radius: 2em;
     text-align: center;
     padding: 0.3em 1.2em;
-    background-color: #A0AAB2;
+    background-color: #B4BCC7;
     transition: all 0.5s;
 }
 #myBtn:hover {
-    background-color: dcadetblue;
+    background-color: #A0AAB2;
 }
 
 #modalForm {
@@ -75,4 +73,13 @@ body {
     border-radius: 2em;
     font-size: 15px;
     padding: 6px 15px;
+}
+
+.readBtn {
+    border-radius: 2em;
+}
+
+#removeBtn {
+    border-radius: 2em;
+    margin-left: 5px;
 }
