--- a/style.css
+++ b/style.css
@@ -16,19 +16,20 @@
 .modal-content {
     background-color: #fefefe;
     margin: 15% auto; /* 15% from the top and centered */
-    padding: 20px;
+    padding: 25px;
     border: 1px solid #888;
-    width: 250px;
+    width: 300px;
+    text-align: center;
+    position: relative;
 }
   
 .close {
     color: #aaa;
-    float: right;
+    position: absolute;
+    top: 0px;
+    right: 10px;
     font-size: 28px;
     font-weight: bold;
-}
-  
-.close {
     color: black;
     cursor: pointer;
 }
