--- a/style.css
+++ b/style.css
@@ -44,7 +44,8 @@ header {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 300;
     font-size: 65px;
-    text-decoration: underline black;
+    border-bottom: 5px solid #2E3532;
+    color: #2E3532;
 }
 
 body {
@@ -53,6 +54,7 @@ body {
 
 #myBtn {
     margin-top: 30px;
+    margin-bottom: 30px;
     font-size: 18px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     border-radius: 2em;
