--- a/style.css
+++ b/style.css
@@ -83,10 +83,23 @@ body {
 .readBtn {
     border-radius: 2em;
     outline: none;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 #removeBtn {
     border-radius: 2em;
     margin-left: 5px;
     outline: none;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+#Library-container {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 20px;
+    border-radius: 8px;
+    border: 3px solid #2E3532;
+    padding: 7px 7px;
+    position: relative;
+    width: 150px;
+    height: auto;
 }
