--- a/style.css
+++ b/style.css
@@ -49,30 +49,50 @@ h1 {
 }
 
 nav {
+    display: flex;
     border-bottom: black solid 5px;
+    overflow: hidden;
+    float: left;
+    width: 100%;
+    height: auto;
+    justify-content: space-between;
 }
 
-#log-in {
-    float: left;
+.main {
+    display: absolute;
 }
 
 body {
     background-color: #C7CEDB;
 }
 
-#myBtn {
-    margin-top: 30px;
-    margin-bottom: 30px;
-    font-size: 18px;
+#loginBtn {
+    padding:0.3em 1.2em;
+    margin:16px;
+    border-radius:2em;
+    border: none;
+    box-sizing: border-box;
+    text-decoration:none;
+    font-size: 20px;
+    color: #C7CEDB;
+    background-color:#72767c;
+    text-align:center;
+    transition: all 0.2s;
+}
+
+#new-book {
+    margin: 32px;
+    font-size: 24px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     border-radius: 2em;
     text-align: center;
     padding: 0.3em 1.2em;
-    background-color: #B4BCC7;
+    color: #C7CEDB;
+    background-color: #72767c;
+    border: none;
     transition: all 0.5s;
-    outline: none;
 }
-#myBtn:hover {
+#new-book:hover, #loginBtn:hover {
     background-color: #9DA1AD;
 }
 
